[gd_scene load_steps=2 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 80.0
margin_right = -50.0
margin_bottom = -40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 120.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 15.0
text = "Godotoid"
fit_content_height = true

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 300.0
margin_bottom = 39.0
text = "Start"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 63.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 300.0
margin_bottom = 87.0
text = "Quit"
[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="VBoxContainer/Credits" to="." method="_on_Credits_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
